# scrapercli

./: .gitignore  AGENTS.md  Justfile  README.md  SNAPSHOT.md  pyproject.toml  scraper.example.yml
src/scraper/: cli.py  models.py  runtime.py
src/scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scraper/adapters/: __init__.py  base.py  registry.py
src/scraper/discovery/: framework.py  probes.py  sitemap.py
src/scraper/extractors/: publisher_markdown.py
src/scraper/html/: metadata.py  repetition.py  scoring.py
src/scraper/http/: cache.py
src/scraper/observability/: recorder.py  store.py
src/scraper/utils/: text.py  url.py
src/staged_scraper/: __main__.py  cli.py  config.py  models.py  runtime.py
src/staged_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/staged_scraper/discovery/: llms.py
src/staged_scraper/extractors/: base.py  browser.py  html_static.py  http_replay.py  structured.py
src/staged_scraper/html/: markdown.py  repetition.py
src/staged_scraper/http/: client.py  robots.py
src/staged_scraper/observability/: store.py
src/staged_scraper/pipeline/: crawler.py  orchestrator.py  quality.py
src/staged_scraper/utils/: dom.py  hashing.py
tests/: test_cli.py  test_framework.py  test_http_replay.py  test_llms.py  test_markdown_renderer.py  test_orchestrator.py  test_output_profile.py  test_sitemap.py  test_static_html_extractor.py  test_structured_extractor.py
tests/fixtures/: article_page.html  nextjs_page.html
